fix crashes on JVM 17